--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 attrs==25.3.0
+azure-ai-documentintelligence==1.0.2
+azure-cognitiveservices-vision-computervision==0.9.1
+azure-common==1.1.28
+azure-core==1.35.0
 boto3==1.38.7
 botocore==1.38.7
 certifi==2025.4.26
@@ -12,14 +16,19 @@ Deprecated==1.2.18
 frozenlist==1.6.0
 future==1.0.0
 idna==3.10
+isodate==0.7.2
 jmespath==1.0.1
 line-bot-sdk==3.17.1
+msrest==0.7.1
 multidict==6.4.3
+oauthlib==3.3.1
+pillow==11.3.0
 propcache==0.3.1
 pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 requests==2.32.3
+requests-oauthlib==2.0.0
 s3transfer==0.12.0
 six==1.17.0
 typing-inspection==0.4.0
