modified gitignore to include bat and sh with the same name

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@ analysis/
 python/
 kakeibot-weekly/
 info.txt
-zip-command.bat
-zip-command-for-weekly.bat
-zip-command-for-layer.bat
+zip-command.*
+zip-command-for-weekly.*
+zip-command-for-layer.*
 test_weekly-notify.py
-archive-for-weekly.sh
+archive-for-weekly.*
 README_Internal.md
 setenv.*
