--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@ analysis/
 python/
 kakeibot-weekly/
 .vscode/
+
+# Python cache and compiled files
+__pycache__/
+*.py[cod]
+*.pyc
+*.pyo
+*.pyd
+*$py.class
+
 info.*
 zip-command.*
 zip-command-for-weekly.*
